raycast and light animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Starter</title>
+    <title>raycast + lights</title>
     <meta name="description" content="Starter thhree js app" />
     <meta name="keywords" content="webgl, threejs" />
     <meta name="author" content="Martin Hanisko" />
@@ -12,8 +12,7 @@
 
 <body>
     <main>
-            <h1><strong>Three.js/WebGL</strong> example scene</h1>
-            <h2>(move cursor around scene)</h2>
+            <h1><strong>Three.js/WebGL</strong> raycast scene</h1>
     </main>
 </body>
 </html>
